fix: wrong width creating an horizontal sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ h2 {
 
 .Head {
     height: 100vh;
-    width: 100vw;
     margin-bottom: 3em;
 
     display: flex;
